Launchpad automatic translations update.

--- a/po/stellarium/ca.po
+++ b/po/stellarium/ca.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-24 23:27+0700\n"
-"PO-Revision-Date: 2012-04-09 17:42+0000\n"
+"PO-Revision-Date: 2012-04-29 18:54+0000\n"
 "Last-Translator: Marc Coll Carrillo <Unknown>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-04-25 04:37+0000\n"
-"X-Generator: Launchpad (build 15139)\n"
+"X-Launchpad-Export-Date: 2012-04-30 04:39+0000\n"
+"X-Generator: Launchpad (build 15171)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -151,12 +151,12 @@ msgstr "Diàmetre aparent: %1"
 #: src/core/modules/Planet.cpp:189
 #, qt-format
 msgid "Phase Angle: %1"
-msgstr ""
+msgstr "Angle de fase: %1"
 
 #: src/core/modules/Planet.cpp:190
 #, qt-format
 msgid "Elongation: %1"
-msgstr ""
+msgstr "Elongació: %1"
 
 #: src/core/modules/Planet.cpp:191
 #, qt-format
@@ -3006,7 +3006,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:800
 msgid "Customized"
-msgstr ""
+msgstr "A mida"
 
 #: src/ui_configurationDialog.h:802
 msgid "Display no information"
@@ -3352,7 +3352,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:198
 msgid "An object's name"
-msgstr ""
+msgstr "El nom d'un objecte"
 
 #: src/ui_CustomInfoDialog.h:200
 msgid "Display  info about a catalog numbers"
@@ -3368,7 +3368,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:206
 msgid "Visual magnitude"
-msgstr ""
+msgstr "Magnitud visual"
 
 #: src/ui_CustomInfoDialog.h:208
 msgid "Display  info about an absolute magnitude"
@@ -3376,7 +3376,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:210
 msgid "Absolute magnitude"
-msgstr ""
+msgstr "Magnitud absoluta"
 
 #: src/ui_CustomInfoDialog.h:212
 msgid "Display the equatorial position (J2000 ref)"
@@ -3416,7 +3416,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:230
 msgid "Object's distance"
-msgstr ""
+msgstr "Distància de l'objecte"
 
 #: src/ui_CustomInfoDialog.h:232
 msgid "Display info about an object's size"
@@ -3424,7 +3424,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:234
 msgid "Object's size"
-msgstr ""
+msgstr "Mida de l'objecte"
 
 #: src/ui_CustomInfoDialog.h:236 src/ui_CustomInfoDialog.h:240
 #: src/ui_CustomInfoDialog.h:244
