--- a/po/stellarium-skycultures/ru.po
+++ b/po/stellarium-skycultures/ru.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-15 17:12+0700\n"
-"PO-Revision-Date: 2011-12-16 13:20+0000\n"
+"PO-Revision-Date: 2012-05-01 09:52+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Koptev Oleg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-03-16 04:49+0000\n"
-"X-Generator: Launchpad (build 14951)\n"
+"X-Launchpad-Export-Date: 2012-05-02 05:24+0000\n"
+"X-Generator: Launchpad (build 15177)\n"
 "Language: ru\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -133,7 +133,7 @@ msgstr "Планетарная туманность Восьмерка"
 
 #: nebulae/default/ngc2000names.dat:151
 msgid "Eskimo nebula"
-msgstr "Туманность Эскимо"
+msgstr "Туманность Эскимос"
 
 #: nebulae/default/ngc2000names.dat:152 nebulae/default/ngc2000names.dat:153
 msgid "The Eyes"
