--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-04-30 18:18+0700\n"
-"PO-Revision-Date: 2012-04-30 20:26+0000\n"
+"POT-Creation-Date: 2012-05-02 10:28+0700\n"
+"PO-Revision-Date: 2012-05-01 18:24+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-01 05:21+0000\n"
-"X-Generator: Launchpad (build 15171)\n"
+"X-Launchpad-Export-Date: 2012-05-02 05:18+0000\n"
+"X-Generator: Launchpad (build 15177)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -341,6 +341,30 @@ msgstr "(zdánlivý)"
 #, qt-format
 msgid "Az/Alt: %1/%2"
 msgstr "Azimut/Výška: %1/%2"
+
+#: src/core/SimbadSearcher.cpp:55
+msgid "Network error"
+msgstr ""
+
+#: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
+msgid "Error parsing position"
+msgstr ""
+
+#: src/core/SimbadSearcher.cpp:130
+msgid "Querying"
+msgstr "Dotazování"
+
+#: src/core/SimbadSearcher.cpp:132
+msgid "Error"
+msgstr ""
+
+#: src/core/SimbadSearcher.cpp:134
+msgid "Not found"
+msgstr "Nenalezeno"
+
+#: src/core/SimbadSearcher.cpp:134
+msgid "Found"
+msgstr "Nalezeno"
 
 #: src/gui/ConfigurationDialog.cpp:346
 msgid "Select screenshot directory"
@@ -1070,11 +1094,19 @@ msgstr "přírodní"
 msgid "starchart"
 msgstr "hvězdná obloha"
 
-#: src/gui/SearchDialog.cpp:503
+#: src/gui/SearchDialog.cpp:351
+msgid "Simbad Lookup Error"
+msgstr "Chyba vyhledávání v Simbad"
+
+#: src/gui/SearchDialog.cpp:359
+msgid "Simbad Lookup"
+msgstr "Vyhledávání v Simbad"
+
+#: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
 msgstr "Univerzita ve Štrasburku (Francie)"
 
-#: src/gui/SearchDialog.cpp:504
+#: src/gui/SearchDialog.cpp:508
 msgid "Harvard University (USA)"
 msgstr "Harvardova univerzita (USA)"
 
