--- a/po/stellarium/ar.po
+++ b/po/stellarium/ar.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-02 10:28+0700\n"
-"PO-Revision-Date: 2012-05-01 14:08+0000\n"
+"PO-Revision-Date: 2012-05-02 14:30+0000\n"
 "Last-Translator: Khalid AlAjaji <Unknown>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-02 05:17+0000\n"
-"X-Generator: Launchpad (build 15177)\n"
+"X-Launchpad-Export-Date: 2012-05-03 05:17+0000\n"
+"X-Generator: Launchpad (build 15185)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -343,11 +343,11 @@ msgstr "‎ارتفاع زاوي / سمتي:‎ %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "خطأ في الاتصال"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "خطأ في تحليل إحداثيات الموقع"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
@@ -355,7 +355,7 @@ msgstr "استفسار"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "خطأ"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
