--- a/po/stellarium/bs.po
+++ b/po/stellarium/bs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-02 10:28+0700\n"
-"PO-Revision-Date: 2012-04-26 22:24+0000\n"
+"PO-Revision-Date: 2012-05-02 08:45+0000\n"
 "Last-Translator: Kenan Dervišević <kenan3008@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-02 05:18+0000\n"
-"X-Generator: Launchpad (build 15177)\n"
+"X-Launchpad-Export-Date: 2012-05-03 05:17+0000\n"
+"X-Generator: Launchpad (build 15185)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -344,27 +344,27 @@ msgstr "Az/Alt: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Mrežna greška"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "Greška u analizi pozicije"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
-msgstr ""
+msgstr "Šaljem upit"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Greška"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "Nije pronađeno"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "Pronađeno"
 
 #: src/gui/ConfigurationDialog.cpp:346
 msgid "Select screenshot directory"
@@ -702,7 +702,7 @@ msgstr "Ekvatorijalna mreža J2000"
 
 #: src/gui/StelGui.cpp:111 src/ui_viewDialog.h:1127
 msgid "Ecliptic J2000 grid"
-msgstr ""
+msgstr "Ekliptička J2000 mreža"
 
 #: src/gui/StelGui.cpp:112 src/ui_viewDialog.h:1129
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:354
@@ -901,19 +901,19 @@ msgstr "Oduzmi jednu sideričku sedmicu"
 
 #: src/gui/StelGui.cpp:168
 msgid "Add 1 sidereal month"
-msgstr ""
+msgstr "Dodaj 1 zvjezdani mjesec"
 
 #: src/gui/StelGui.cpp:169
 msgid "Subtract 1 sidereal month"
-msgstr ""
+msgstr "Oduzmi 1 zvjezdani mjesec"
 
 #: src/gui/StelGui.cpp:170
 msgid "Add 1 sidereal year"
-msgstr ""
+msgstr "Dodaj 1 zvjezdanu godinu"
 
 #: src/gui/StelGui.cpp:171
 msgid "Subtract 1 sidereal year"
-msgstr ""
+msgstr "Oduzmi 1 zvjezdanu godinu"
 
 #: src/gui/StelGui.cpp:174
 msgid "Center on selected object"
@@ -1097,11 +1097,11 @@ msgstr "mapa zvijezda"
 
 #: src/gui/SearchDialog.cpp:351
 msgid "Simbad Lookup Error"
-msgstr ""
+msgstr "Grešku u pretrazi Simbada"
 
 #: src/gui/SearchDialog.cpp:359
 msgid "Simbad Lookup"
-msgstr ""
+msgstr "Pretraga Simbada"
 
 #: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
