--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-02 10:28+0700\n"
-"PO-Revision-Date: 2012-05-01 18:24+0000\n"
+"PO-Revision-Date: 2012-05-02 20:37+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-02 05:18+0000\n"
-"X-Generator: Launchpad (build 15177)\n"
+"X-Launchpad-Export-Date: 2012-05-03 05:18+0000\n"
+"X-Generator: Launchpad (build 15185)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -344,11 +344,11 @@ msgstr "Azimut/Výška: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Chyba sítě"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "Chyba při zpracování pozice"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
@@ -356,7 +356,7 @@ msgstr "Dotazování"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Chyba"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
