--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-02 10:28+0700\n"
-"PO-Revision-Date: 2012-05-01 22:56+0000\n"
-"Last-Translator: Neliton Pereira Jr <nelitonpjr@gmail.com>\n"
+"PO-Revision-Date: 2012-05-02 14:49+0000\n"
+"Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-02 05:23+0000\n"
-"X-Generator: Launchpad (build 15177)\n"
+"X-Launchpad-Export-Date: 2012-05-03 05:23+0000\n"
+"X-Generator: Launchpad (build 15185)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542
 msgid "Meridian"
@@ -350,11 +350,11 @@ msgstr "Azimute/Altura: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Erro de rede"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "Erro ao analisar posição"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
@@ -362,7 +362,7 @@ msgstr "Consultando"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Erro"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
