--- a/po/stellarium/bs.po
+++ b/po/stellarium/bs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-05-02 08:45+0000\n"
+"PO-Revision-Date: 2012-05-04 08:33+0000\n"
 "Last-Translator: Kenan Dervišević <kenan3008@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:38+0000\n"
+"X-Launchpad-Export-Date: 2012-05-05 04:39+0000\n"
 "X-Generator: Launchpad (build 15195)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -2983,23 +2983,23 @@ msgstr "Nebeska sfera"
 
 #: src/ui_viewDialog.h:1162
 msgid "Show equator line"
-msgstr ""
+msgstr "Prikaži liniju ekvatora"
 
 #: src/ui_viewDialog.h:1166
 msgid "Show meridian line"
-msgstr ""
+msgstr "Prikaži meridijansku liniju"
 
 #: src/ui_viewDialog.h:1170
 msgid "Show horizon line"
-msgstr ""
+msgstr "Prikaži liniju horizonta"
 
 #: src/ui_viewDialog.h:1174
 msgid "Show ecliptic line"
-msgstr ""
+msgstr "Prikaži ekliptičku liniju"
 
 #: src/ui_viewDialog.h:1178
 msgid "Show Galactic plane line"
-msgstr ""
+msgstr "Prikaži liniju galaktičke ravni"
 
 #: src/ui_viewDialog.h:1182
 msgid "Projection"
@@ -5966,6 +5966,3 @@ msgstr "ekstragalaktički (u MC) pulsar"
 
 #~ msgid "Hydra"
 #~ msgstr "Hydra"
-
-#~ msgid "Search also in the SIMBAD on-line astronomical database"
-#~ msgstr "Pretražite i SIMBAD online astronomsku bazu"
