--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-05-03 11:42+0000\n"
+"PO-Revision-Date: 2012-05-04 18:41+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:38+0000\n"
+"X-Launchpad-Export-Date: 2012-05-05 04:39+0000\n"
 "X-Generator: Launchpad (build 15195)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -4097,8 +4097,8 @@ msgid ""
 "weirdness when looking at dates outside this range."
 msgstr ""
 "Předpokládané pozice jsou použitelné pouze pro poměrně krátkou dobu (v řádu "
-"dnů, týdnů či třeba měsíců do minulosti a budoucnosti). Mimo tento rozsah "
-"očekávejte vysoké množství podivností."
+"dnů, týdnů či třeba měsíců do minulosti a budoucnosti). Mimo tento rozsah se "
+"na tyto pozice nelze spolehnout."
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:268
 msgid ""
@@ -5956,6 +5956,3 @@ msgstr "extragalaktický (v MC) pulsar"
 
 #~ msgid "Finished downloading all star catalogs!"
 #~ msgstr "Stahování všech katalogů hvězd dokončeno!"
-
-#~ msgid "Search also in the SIMBAD on-line astronomical database"
-#~ msgstr "Hledat také v on-line astronomické databázi SIMBAD"
