--- a/po/stellarium/uk.po
+++ b/po/stellarium/uk.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: stellarium-uk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-05-02 07:40+0000\n"
+"PO-Revision-Date: 2012-05-04 08:11+0000\n"
 "Last-Translator: Yuri Chornoivan <yurchor@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:44+0000\n"
+"X-Launchpad-Export-Date: 2012-05-05 04:39+0000\n"
 "X-Generator: Launchpad (build 15195)\n"
 "X-Poedit-Country: UKRAINE\n"
 "Language: uk\n"
@@ -2988,23 +2988,23 @@ msgstr "Небесна сфера"
 
 #: src/ui_viewDialog.h:1162
 msgid "Show equator line"
-msgstr ""
+msgstr "Показувати лінію екватора"
 
 #: src/ui_viewDialog.h:1166
 msgid "Show meridian line"
-msgstr ""
+msgstr "Показувати лінію меридіана"
 
 #: src/ui_viewDialog.h:1170
 msgid "Show horizon line"
-msgstr ""
+msgstr "Показувати лінію горизонта"
 
 #: src/ui_viewDialog.h:1174
 msgid "Show ecliptic line"
-msgstr ""
+msgstr "Показувати лінію екліптики"
 
 #: src/ui_viewDialog.h:1178
 msgid "Show Galactic plane line"
-msgstr ""
+msgstr "Показувати лінію галактичної площини"
 
 #: src/ui_viewDialog.h:1182
 msgid "Projection"
@@ -5984,6 +5984,3 @@ msgstr "позагалактичний пульсар"
 
 #~ msgid "Shut Down: "
 #~ msgstr "Завершення роботи: "
-
-#~ msgid "Search also in the SIMBAD on-line astronomical database"
-#~ msgstr "Виконати також пошук у астрономічній інтернет-базі даних SIMBAD"
