--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-04 02:16+0700\n"
-"PO-Revision-Date: 2012-04-27 18:54+0000\n"
+"PO-Revision-Date: 2012-05-05 09:12+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-04 04:37+0000\n"
+"X-Launchpad-Export-Date: 2012-05-06 04:37+0000\n"
 "X-Generator: Launchpad (build 15195)\n"
 "X-Poedit-Country: BELARUS\n"
 "Language: be\n"
@@ -351,27 +351,27 @@ msgstr "Азімут/Вышыня: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "Сеткавая памылка"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
-msgstr ""
+msgstr "Не ўдалося разабраць становішча"
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
-msgstr ""
+msgstr "Запытваньне"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "Памылка"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "Не адшукана"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "Адшукана"
 
 #: src/gui/ConfigurationDialog.cpp:346
 msgid "Select screenshot directory"
@@ -709,7 +709,7 @@ msgstr "Экватарыяльная сетка J2000"
 
 #: src/gui/StelGui.cpp:111 src/ui_viewDialog.h:1158
 msgid "Ecliptic J2000 grid"
-msgstr ""
+msgstr "Экліптычная сетка J2000"
 
 #: src/gui/StelGui.cpp:112 src/ui_viewDialog.h:1160
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:354
@@ -908,19 +908,19 @@ msgstr "Назад на 1 зоркавы тыдзень"
 
 #: src/gui/StelGui.cpp:168
 msgid "Add 1 sidereal month"
-msgstr ""
+msgstr "Дадаць 1 зорны месяц"
 
 #: src/gui/StelGui.cpp:169
 msgid "Subtract 1 sidereal month"
-msgstr ""
+msgstr "Адняць 1 зорны месяц"
 
 #: src/gui/StelGui.cpp:170
 msgid "Add 1 sidereal year"
-msgstr ""
+msgstr "Дадаць 1 зорны год"
 
 #: src/gui/StelGui.cpp:171
 msgid "Subtract 1 sidereal year"
-msgstr ""
+msgstr "Адняць 1 зорны год"
 
 #: src/gui/StelGui.cpp:174
 msgid "Center on selected object"
@@ -1106,11 +1106,11 @@ msgstr "зорная карта"
 
 #: src/gui/SearchDialog.cpp:351
 msgid "Simbad Lookup Error"
-msgstr ""
+msgstr "Памылка пошуку Simbad"
 
 #: src/gui/SearchDialog.cpp:359
 msgid "Simbad Lookup"
-msgstr ""
+msgstr "Пошук Simbad"
 
 #: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
@@ -2991,23 +2991,23 @@ msgstr "Нябесная сфэра"
 
 #: src/ui_viewDialog.h:1162
 msgid "Show equator line"
-msgstr ""
+msgstr "Паказваць лінію экватару"
 
 #: src/ui_viewDialog.h:1166
 msgid "Show meridian line"
-msgstr ""
+msgstr "Паказваць лінію мэрыдыяну"
 
 #: src/ui_viewDialog.h:1170
 msgid "Show horizon line"
-msgstr ""
+msgstr "Паказваць лінію гарызонту"
 
 #: src/ui_viewDialog.h:1174
 msgid "Show ecliptic line"
-msgstr ""
+msgstr "Паказваць лінію экліптыкі"
 
 #: src/ui_viewDialog.h:1178
 msgid "Show Galactic plane line"
-msgstr ""
+msgstr "Паказваць лінію плоскасьці Ґаляктыкі"
 
 #: src/ui_viewDialog.h:1182
 msgid "Projection"
@@ -3075,7 +3075,7 @@ msgstr "Паказаць зьвесткі пра карыстальнікавы 
 
 #: src/ui_configurationDialog.h:800
 msgid "Customized"
-msgstr ""
+msgstr "Карыстальнікавы"
 
 #: src/ui_configurationDialog.h:802
 msgid "Display no information"
@@ -3413,7 +3413,7 @@ msgstr ""
 
 #: src/ui_CustomInfoDialog.h:194
 msgid "Custom Info Settings"
-msgstr ""
+msgstr "Карыстальнікавы настройкі"
 
 #: src/ui_CustomInfoDialog.h:196
 msgid "Display info about an object's name"
@@ -3473,7 +3473,7 @@ msgstr "Каардынаты вышыня-азімут"
 
 #: src/ui_CustomInfoDialog.h:224
 msgid "Display the hour angle + DE (of date)"
-msgstr ""
+msgstr "Паказваць гадзінавы вугал і схіленьне (даты)"
 
 #: src/ui_CustomInfoDialog.h:226
 msgid "The hour angle"
@@ -3498,7 +3498,7 @@ msgstr "памер аб'екту"
 #: src/ui_CustomInfoDialog.h:236 src/ui_CustomInfoDialog.h:240
 #: src/ui_CustomInfoDialog.h:244
 msgid "Display a derived class-specific extra fields"
-msgstr ""
+msgstr "Паказваць спэцыфічныя для аб'екта дадатковыя палі"
 
 #: src/ui_CustomInfoDialog.h:238
 msgid "Additional info (Extra 1)"
@@ -5975,6 +5975,3 @@ msgstr "пазаґаляктычны (у МВ) пульсар"
 
 #~ msgid "xxx"
 #~ msgstr "xxx"
-
-#~ msgid "Search also in the SIMBAD on-line astronomical database"
-#~ msgstr "Шукаць таксама ў сеціўнай астранамічнай базе SIMBAD"
