--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 Bug fix release.
 
 Added:
-- galactic and ecliptic grids (LP: #834307)
+- ecliptic grid (LP: #834307)
 - world observatories to the locations list (LP: #891643)
 - allow configuration of url for SIMBAD lookups (LP: #948528)
 - opportunity to freely choose the object information to display (LP: #834325)
